<resources>

    <string name="app_name" translatable="false">Simple Dilbert</string>
    <string name="apache_license_2_0" translatable="false">Apache License 2.0</string>
    <string name="menu_datepicker">Choose date</string>
    <string name="about_contents">Made by Marek Sebera 2013–2015, marek@msebera.cz</string>
    <string name="cd_dilbert_image">Dilbert</string>
    <string name="loading_exception_error">Dilbert.com is not available. Loading failed.</string>
    <string name="menu_latest">Show latest</string>
    <string name="menu_oldest">Show oldest</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_open_in_browser">Open in Browser</string>
    <string name="download_manager_unsupported">Unsupported on this device</string>
    <string name="menu_download">Save current image</string>
    <string name="menu_favorite_add">Favorite</string>
    <string name="menu_favorite_remove">Unfavorite</string>
    <string name="menu_show_favorite">Show favorites</string>
    <string name="menu_zoom">Zoom</string>
    <string name="toast_no_favorites">You have no favorite strips</string>
    <string name="menu_random">Random</string>
    <string name="share_chooser">Share Dilbert Comics</string>
    <string name="menu_share">Share this</string>
    <string name="widget_cd_next">Next</string>
    <string name="widget_cd_latest">Latest</string>
    <string name="widget_cd_previous">Previous</string>
    <string name="widget_cd_random">Random</string>
    <string name="title_preferences">Preferences</string>
    <string name="pref_force_landscape">Force Landscape Orientation</string>
    <string name="pref_reverse_landscape">Reverse Landscape Mode</string>
    <string name="pref_enable_high_quality">Enable High Quality Images</string>
    <string name="pref_force_dark_background">Use Dark Backgrounds</string>
    <string name="pref_hide_toolbars">Hide Toolbars By Default</string>
    <string name="pref_show_license">Display Software License</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_download_path">Downloads target folder:</string>
    <string name="pref_share_image">Don\'t share image, just a URL</string>
    <string name="pref_mobile_network">Optimize for mobile network usage</string>
    <string name="horizontal_divider" translatable="false">Horizontal divider</string>
    <string name="menu_open_at">Open this day</string>
    <string name="folder_picker_cannot_write">Current folder is not writable</string>
    <string name="folder_picker_select_this">Select this folder</string>
    <string name="folder_picker_show_hidden">Show hidden files</string>
    <string name="folder_picker_show_files">Show files</string>
    <string name="folder_picker_go_to_default">Go to default folder</string>
    <string name="folder_picker_cannot_open">Cannot open folder</string>
    <string name="pref_open_at_latest_strip">Always open on latest strip</string>
    <string name="pref_widget_always_latest">Widget show always latest strip</string>
    <string name="pref_title_general_settings">General Settings</string>
    <string name="pref_title_application_settings">Application Settings</string>
    <string name="pref_title_widget_settings">Widgets Settings</string>
    <string name="pref_default_zoom_level">Choose default zoom level</string>
    <string name="export_cached_urls" translatable="false">Export cached URLs</string>

</resources>
