<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <CheckBox
            android:id="@+id/pref_force_landscape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_force_landscape" />

        <CheckBox
            android:id="@+id/pref_enable_high_quality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_enable_high_quality" />

        <CheckBox
            android:id="@+id/pref_force_dark_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_force_dark_background" />

        <CheckBox
            android:id="@+id/pref_force_dark_background_widget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_force_dark_background_widget" />

        <CheckBox
            android:id="@+id/pref_hide_toolbars"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_hide_toolbars" />

        <CheckBox
            android:id="@+id/pref_share_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_share_image" />

        <CheckBox
            android:id="@+id/pref_mobile_network"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pref_mobile_network" />

        <LinearLayout
            android:id="@+id/pref_download_path_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/pref_download_path" />

            <TextView
                android:id="@+id/pref_download_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp" />
        </LinearLayout>

        <include layout="@layout/horizontal_divider" />

        <TextView
            android:id="@+id/pref_rating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/pref_rating" />

        <include layout="@layout/horizontal_divider" />

        <TextView
            android:id="@+id/pref_show_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/pref_show_license" />

        <include layout="@layout/horizontal_divider" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/about_contents" />
    </LinearLayout>

</merge>